lenovo-sec/iptables-desktop-lenovo
# Generated by iptables-save v1.8.7 on Thu Aug  4 15:14:16 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [41:4014]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 443 -j ACCEPT
-A INPUT -s 192.168.3.1/32 -i enp1s0 -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i enp1s0 -p udp -m state --state RELATED,ESTABLISHED -m udp --dport 123 -j ACCEPT
-A INPUT -i wlp2s0 -p tcp -m state --state RELATED,ESTABLISHED -m tcp --sport 443 -j ACCEPT
-A INPUT -s 192.168.3.1/32 -i wlp2s0 -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i wlp2s0 -p udp -m state --state RELATED,ESTABLISHED -m udp --dport 123 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o enp1s0 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 192.168.3.1/32 -o enp1s0 -p udp -m udp --dport 53 -m udp -j ACCEPT
-A OUTPUT -o enp1s0 -p udp -m udp --sport 123 -j ACCEPT
-A OUTPUT -o wlp2s0 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 192.168.3.1/32 -o wlp2s0 -p udp -m udp --dport 53 -m udp -j ACCEPT
-A OUTPUT -o wlp2s0 -p udp -m udp --sport 123 -j ACCEPT
COMMIT
# Completed on Thu Aug  4 15:14:16 2022
